--- a/group_vars/all/network_authentication.yaml
+++ b/group_vars/all/network_authentication.yaml
@@ -1,6 +1,6 @@
 ---
 credentials:
   host: "{{ ansible_host }}"
-  user: "{{ ansible_ssh_user }}"
-  passwd: "{{ansible_ssh_pass}}"
+  username: "{{ ansible_ssh_user }}"
+  password: "{{ansible_ssh_pass}}"
   port: "{{ netconf_port }}"
